# North-Star

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHIVIST.md  AUDITING.md  CONTRIBUTING.md  DATABASE.md  Dockerfile.migrate  GOVERNANCE.md  LICENSE  MEMORY_MODEL.md  NORTH_STAR.md  North-Star-Documentation.docx  OBSERVABILITY.md  README.md  ROADMAP.md  SCRIBE.md  WORKFLOWS.md  alembic.ini  decision-template.md  docker-compose.yml  download (11)  download (5)  mkdocs.yml  push_to_github.ps1  pyproject.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MEMORY_MODEL.md  NORTH_STAR.md  PHILOSOPHY.md  RETRIEVAL.md  ROADMAP.md
docs/AGENTS/: ARCHIVIST.md  SCRIBE.md
docs/DATABASE/: KNOWLEDGE_GRAPH.md  SCHEMA.md
docs/IMPLEMENTATIONS/: POSTGRES_PGVECTOR_REDIS.md
pytest-cache-files-b__xx23g/v/cache/: lastfailed  nodeids
sdk/python/: pyproject.toml
sdk/python/northstar/: __init__.py  client.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts
seeds/: README.md  manifest.json
seeds/cross_domain/: business_analysis.json  compliance.json  customer_success.json  cybersecurity.json  decision_making.json  fleet_management.json  healthcare_administration.json  human_ai_collaboration.json  investment_decision.json  learning_certification.json  logistics.json  maintenance.json  organizational_memory.json  procurement.json  project_management.json  property_management.json  proposal_writing.json  sales_engineering.json  technical_support.json  transport_route_optimization.json
seeds/developer_core/: architecture.json  data_modeling.json  deployment.json  design_patterns.json  documentation.json  observability.json  performance.json  security.json  testing.json
src/: __init__.py  cli.py  config.py
src/agents/archivist/: __init__.py  models.py  pipeline.py  worker.py
src/agents/scribe/: __init__.py  models.py  pipeline.py  prompts.py  worker.py
src/api/: main.py
src/db/: client.py
src/db/migrations/: env.py
src/pipelines/: queues.py
src/retrieval/: __init__.py  graph.py  scorer.py
src/tools/: backfill.py  seed.py
src/utils/: embeddings.py
templates/: new_decision_workflow.md  new_entity_type.md
templates/new_agent/: models.py  pipeline.py  worker.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_archivist.py  test_scorer.py  test_scribe.py
(+4 files in other folders)
