[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "north-star"
version = "1.0.0"
description = "An architecture for AI organizations with institutional memory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  # Database
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",  # Alembic migrations (sync)
  "alembic>=1.13",

  # Cache / Queues
  "redis[asyncio]>=5.0",

  # API
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",

  # Config
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",

  # Embeddings (OpenAI)
  "openai>=1.30",
  "numpy>=1.26",

  # LLM — Scribe and Archivist agents
  "anthropic>=0.28",

  # HTTP client (for provider calls)
  "httpx>=0.27",
]

[project.optional-dependencies]
# Local embeddings — no API key required
local = [
  "sentence-transformers>=3.0",
  "torch>=2.2",
]
# Development tools
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",   # HTTPX for TestClient
  "black>=24.0",
  "ruff>=0.4",
  "mypy>=1.10",
]
# Documentation site
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0",
]

[project.scripts]
northstar-api = "src.api.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
