[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "northstar-sdk"
version = "0.1.0"
description = "Python SDK for the North Star AI institutional memory API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",   # mock httpx in tests
]

[project.urls]
Homepage    = "https://github.com/YOUR_ORG/north-star"
Repository  = "https://github.com/YOUR_ORG/north-star"
Issues      = "https://github.com/YOUR_ORG/north-star/issues"

[tool.hatch.build.targets.wheel]
packages = ["northstar"]
